--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run tests and generate coverage report
         run: touch .env && docker-compose run -v "$PWD/reports:/reports" pytest --cov --cov-report=xml:/reports/coverage.xml test
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_USER: $GITHUB_ACTOR
       - name: Upload coverage report to Codecov
         run: bash <(curl -s https://codecov.io/bash)
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_USER: $GITHUB_ACTOR
