fix(github): Correct docker-compose.yml setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,5 @@ services:
     command: /src/propose/run.py
 
   pytest:
-    build: .
-    volumes:
-      - .:/src/propose
+    <<: *common
     entrypoint: [ "pytest" ]
