--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run tests and generate coverage report
-        run: echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \nGITHUB_USER=$GITHUB_ACTOR" >> .env && docker-compose run -v "$PWD/reports:/reports" pytest --cov --cov-report=xml:/reports/coverage.xml tests
+        run: echo "GITHUB_USER=ppierzc \nGITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> .env && docker-compose run -v "$PWD/reports:/reports" pytest --cov --cov-report=xml:/reports/coverage.xml tests
       - name: Upload coverage report to Codecov
         run: bash <(curl -s https://codecov.io/bash)
         env:
