--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,4 +41,9 @@ services:
 
   pytest:
     <<: *common
+    volumes:
+      - .:/src/propose
+      - ./tests:/tests
+      - ./notebooks:/notebooks
+      - /var/sinz-shared:/data
     entrypoint: [ "pytest" ]
