fix(github): tests visibility

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,10 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
+      - name: Setup Env
+        run: echo "GITHUB_USER=${{ github.actor }}" >> .env && echo "GITHUB_TOKEN=${{ github.token }}" >> .env
       - name: Run tests and generate coverage report
-        run: echo "GITHUB_USER=${{ github.actor }}" >> .env && echo "GITHUB_TOKEN=${{ github.token }}" >> .env && docker-compose run -v "$PWD/reports:/reports" pytest --cov --cov-report=xml:/reports/coverage.xml tests
+        run: pwd && docker-compose run -v "$PWD/reports:/reports" pytest --cov --cov-report=xml:/reports/coverage.xml tests
       - name: Upload coverage report to Codecov
         run: bash <(curl -s https://codecov.io/bash)
         env:
