--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup Env
         run: echo "GITHUB_USER=${{ github.actor }}" >> .env && echo "GITHUB_TOKEN=${{ github.token }}" >> .env
+      - name: Build test image
+        run: docker-compose build pytest
+      - name: PWD
+        run: pwd
       - name: Run tests and generate coverage report
-        run: pwd && docker-compose run -v "$PWD/reports:/reports" pytest --cov --cov-report=xml:/reports/coverage.xml tests
+        run: docker-compose run -v "$PWD/reports:/reports" pytest --cov --cov-report=xml:/reports/coverage.xml tests
       - name: Upload coverage report to Codecov
         run: bash <(curl -s https://codecov.io/bash)
         env:
