--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ imageio~=2.9.0
 tqdm~=4.62.2
 setuptools~=58.0.4
 torch-geometric~=2.0.2
+torch~=1.9.0
+neuralpredictors~=0.1.0
+ffmpeg-python~=0.2.0
