--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-numpy~=1.21.2
-scipy~=1.7.1
-matplotlib~=3.4.3
-nflows~=0.14
-imageio~=2.9.0
-tqdm~=4.62.2
-setuptools~=58.0.4
-torch-geometric~=2.0.2
+numpy
+scipy
+matplotlib
+nflows
+imageio
+tqdm
+setuptools
+torch-geometric
 torch~=1.9.0
-ffmpeg-python~=0.2.0
-scikit-image~=0.19.1
+ffmpeg-python
+scikit-image
 torch-scatter --install-option="-f https://data.pyg.org/whl/torch-1.9.1+cpu.html"
 torch-sparse --install-option="-f https://data.pyg.org/whl/torch-1.9.1+cpu.html"
 pytest
