feat(human36m): make preprocessing service more user-friendly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,13 +32,13 @@ services:
     image: propose
     entrypoint: [ "python" ]
 
-  human36m_preprocess:
-    <<: *python
+  preprocess:
+    image: propose
     volumes:
       - .:/src/propose
       - ./scripts:/scripts
       - ./data:/data
-    command: /scripts/human36m_preprocess.py
+    entrypoint: [ "python", "/scripts/preprocess.py" ]
 
   pytest:
     <<: *common
