--- a/configs/human36m/human36m_config.yaml
+++ b/configs/human36m/human36m_config.yaml
@@ -1,16 +1,34 @@
 seed: 0
+checkpoint_every: 50
+experiment_name: 'mpii-default'
 
 dataset:
   dirname: '/data/human36m/processed'
-  num_samples: 100000
+  mpii: true
+  num_samples: 10
 
 train:
-  lr: 0.001
-  weight_decay: 0
+  optimizer:
+    lr: 1.0e-3
+    weight_decay: 0
+  lr_scheduler:
+    patience: 10
+    mode: "min"
+    factor: 0.1
+    threshold: 5.0e-2
+    min_lr: 1.0e-6
   batch_size: 100
   epochs: 300
 
+
 model:
   num_layers: 10
-  context_features: 2
+  context_features: 10
   hidden_features: 50
+
+embedding:
+    name: 'sage'
+    config:
+      input_dim: 2
+      hidden_dim: 128
+      output_dim: 10
