--- a/configs/human36m/mpii-dev.yaml
+++ b/configs/human36m/mpii-dev.yaml
@@ -3,7 +3,8 @@ seed: 0
 dataset:
   dirname: "/data/human36m/processed"
   mpii: true
-  num_samples: 10
+  num_samples: 1000
+  num_context_samples: 5
 
 train:
   optimizer:
@@ -16,7 +17,7 @@ train:
     threshold: 5.0e-2
     min_lr: 1.0e-6
   batch_size: 100
-  epochs: 1
+  epochs: 10
 
 model:
   num_layers: 10
