--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,17 @@ services:
       - .env
     entrypoint: [ "python", "/scripts/train.py" ]
 
+  eval:
+    image: propose
+    volumes:
+      - .:/src/propose
+      - ./scripts:/scripts
+      - ./data:/data
+      - ./configs:/configs
+    env_file:
+      - .env
+    entrypoint: [ "python", "/scripts/eval.py" ]
+
   preprocess:
     image: propose
     volumes:
