--- a/configs/human36m/mpii-prod-multi-sample.yaml
+++ b/configs/human36m/mpii-prod-multi-sample.yaml
@@ -9,6 +9,7 @@ group: prod
 dataset:
   dirname: "/data/human36m/processed"
   mpii: true
+  num_context_samples: 5
 
 train:
   optimizer:
@@ -21,7 +22,7 @@ train:
     factor: 0.1
     threshold: 1.0e-2
     min_lr: 1.0e-6
-  batch_size: 200
+  batch_size: 1000
   epochs: 200
 
 model:
