--- a/configs/human36m/mpii-prod-var.yaml
+++ b/configs/human36m/mpii-prod-var.yaml
@@ -9,6 +9,7 @@ group: prod
 dataset:
   dirname: "/data/human36m/processed"
   mpii: true
+  use_variance: true
 
 train:
   optimizer:
@@ -40,6 +41,6 @@ model:
 embedding:
     name: "sage"
     config:
-      input_dim: 2
+      input_dim: 4
       hidden_dim: 128
       output_dim: 10
