--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,7 @@ services:
     volumes:
       - .:/src/propose
       - ./tests:/tests
+    working_dir: /tests
     entrypoint: [ "pytest" ]
 
   notebook_server:
