--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - .:/src/propose
       - ./scripts:/scripts
       - ./data:/data
-      - ./configs:/configs
+      - ./experiments:/experiments
     env_file:
       - .env
     entrypoint: [ "python", "/scripts/train.py" ]
@@ -49,7 +49,7 @@ services:
       - .:/src/propose
       - ./scripts:/scripts
       - ./data:/data
-      - ./configs:/configs
+      - ./experiments:/experiments
     env_file:
       - .env
     entrypoint: [ "python", "/scripts/eval.py" ]
